# axolotl

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
src/axolotl/: __init__.py  agent.py  aggregate.py  archetypes.py  chart.py  config.py  engine.py  prices.py
tests/: test_agent.py  test_aggregate.py  test_archetypes.py  test_chart.py  test_config.py  test_engine.py  test_package.py  test_prices.py
